--- a/prpy/algo/fibonacci_sequence.ipynb
+++ b/prpy/algo/fibonacci_sequence.ipynb
@@ -49,10 +49,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "::::{admonition} 回答例\n",
-    ":class: dropdown, hint \n",
+    "## 実装例\n",
     "\n",
-    "```python\n",
+    ":::{margin}\n",
+    "答えを見る前に自分で実装してみよう\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": [
+     "hide-input",
+     "hide-output"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 2, 3, 5, 8, 13, 21, 34]\n"
+     ]
+    }
+   ],
+   "source": [
     "def fibo(n):\n",
     "    if n < 3:\n",
     "        return [1,1]\n",
@@ -62,14 +84,14 @@
     "        fibo_list.append(fibo_i)\n",
     "    return fibo_list\n",
     "        \n",
-    "print(fibo(10))\n",
-    "```\n",
-    "::::"
+    "print(fibo(10))"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
