--- a/prpy/algo/fibonacci_sequence.ipynb
+++ b/prpy/algo/fibonacci_sequence.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "「フィボナッチ数列を100桁目まで返す関数を実装しよう」\n",
     "\n",
+    "フィボナッチ数列とは{cite}`2022-kc`\n",
+    "\n",
     "フィボナッチ数列を列挙する関数を作りましょう。\n",
     "\n",
     "```python\n",
@@ -88,11 +90,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 参考文献\n",
+    "\n",
+    "\n",
+    "### Web\n",
+    "\n",
+    "### 論文・雑誌等\n",
+    "\n",
+    "```{bibliography}\n",
+    ":filter: docname in docnames\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
